--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "joi": "^17.13.3",
     "mongoose": "^8.12.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
